fix bug where user couldnt delete words